# bern_rtos-practice

./: Cargo.toml  README.md  build.rs  memory.x
.cargo/: config.toml
conf/: Cargo.toml  conf.rs
src/: main.rs
